Try to fix Ignite Java 16 build